# guile-2d

./: .gitignore  INSTALL.org  Makefile.am  README.org  TODO  TODO.org  configure.ac  env.in
2d/: actions.scm  agenda.scm  animation.scm  audio.scm  color.scm  coroutine.scm  font.scm  game-loop.scm  game.scm  gl.scm  helpers.scm  input.scm  interpolator.scm  math.scm  mvars.scm  observer.scm  quadtree.scm  rect.scm  scene.scm  sprite.scm  stage.scm  texture.scm  tileset.scm  vector.scm  vector2.scm  window.scm
2d/private/: game.scm
2d/repl/: coop-repl.scm  repl.scm  repl2.scm  server.scm
2d/wrappers/: freeimage.scm  freetype.scm  ftgl.scm  gl.scm  util.scm
build-aux/: guile-sdl.m4
doc/: Makefile.am  audio.texi  game.texi  graphics.texi  guile-2d.texi  introduction.texi  math.texi  scripting.texi
doc/graphics/: animation.texi  color.texi  font.texi  sprite.texi  texture.texi  tileset.texi
doc/math/: math.texi  rect.texi  vector2.texi
doc/scripting/: actions.texi  agenda.texi  coroutine.texi
examples/: action.scm  animation.scm  coroutine.scm  font.scm  particles.scm  scenes.scm  simple.scm  tilemap.scm
examples/fonts/: AUTHORS
examples/images/: AUTHORS
system/repl/: common.scm  repl.scm
