include guile.am

moddir=$(prefix)/share/guile/site/2.0
godir=$(libdir)/guile/2.0/ccache

SOURCES = \
	2d/agenda.scm\
	2d/animation.scm\
	2d/coroutine.scm\
	2d/game-loop.scm\
	2d/gl.scm\
	2d/helpers.scm\
	2d/math.scm\
	2d/sprite.scm\
	2d/texture.scm\
	2d/vector.scm\
	2d/window.scm

EXTRA_DIST += env.in
